# goofy

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/ansiext/: mod.rs
src/app/: agent.rs  app_with_db.rs  mod.rs
src/config/: advanced.rs  mod.rs
src/csync/: maps.rs  mod.rs  slices.rs
src/db/: connect.rs  database.rs  migrations.rs  mod.rs  models.rs  queries.rs
src/diff/: mod.rs
src/format/: mod.rs
src/fsext/: mod.rs
src/history/: mod.rs
src/llm/: gemini.rs  mod.rs  provider.rs  types.rs
src/llm/agent/: mod.rs
src/llm/prompt/: coder.rs  mod.rs  summarizer.rs  task.rs  title.rs
src/llm/tools/: bash.rs  diagnostics.rs  mod.rs  shell.rs
src/log/: mod.rs
src/lsp/: protocol.rs
src/message/: mod.rs  service.rs
src/permission/: manager.rs
src/pubsub/: mod.rs
src/session/: database.rs  database_fix.rs  db_factory.rs  db_manager.rs  mod.rs  pubsub.rs  service.rs
src/shell/: coreutils.rs  mod.rs  parser.rs  persistent.rs  shell.rs
src/tui/: app.rs  mod.rs  polish.rs
src/tui/components/: chat.rs  mod.rs
src/tui/components/animations/: animated_dialog.rs  animated_input.rs  animated_list.rs  animated_text.rs  animation_engine.rs  fade.rs  glow.rs  interpolation.rs  loading.rs  mod.rs  pulse.rs  slide.rs  spinners.rs  transitions.rs
src/tui/components/chat/: advanced.rs  editor.rs  formatting.rs  message_renderer.rs  sidebar.rs
src/tui/components/completions/: code_provider.rs  command_provider.rs  completion_engine.rs  completion_list.rs  file_provider.rs  fuzzy.rs  history_provider.rs
src/tui/components/dialogs/: manager.rs
src/tui/components/files/: diff_viewer.rs  file_picker.rs  mod.rs  permissions.rs
src/tui/components/highlighting/: mod.rs  themes.rs
src/tui/components/image/: formats.rs  mod.rs  renderer.rs
src/tui/components/lists/: filterable_list.rs  lazy_loading.rs  mod.rs  navigation.rs  pagination.rs  selection.rs  virtual_list.rs
src/tui/components/markdown/: mod.rs  renderer.rs  styles.rs  table.rs
src/tui/pages/: chat.rs  mod.rs
src/tui/themes/: colors.rs  mod.rs  presets.rs
