[package]
name = "goofy"
version = "0.1.0"
edition = "2021"
description = "A terminal-based AI coding assistant - Rust port of Charmbracelet's Crush"
license = "MIT"

[lib]
name = "goofy"
path = "src/lib.rs"

[[bin]]
name = "goofy"
path = "src/main.rs"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive"] }

# TUI Framework
ratatui = "0.25"
crossterm = "0.27"

# Async Runtime
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# HTTP Client for AI APIs
reqwest = { version = "0.11", features = ["json"] }
async-openai = "0.18"

# JSON Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File System
walkdir = "2.4"

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# Text Processing
pulldown-cmark = "0.10"
syntect = "5.1"
html2md = "0.2"

# String Matching
fuzzy-matcher = "0.3"

# Web Scraping
scraper = "0.18"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
dirs = "5.0"
futures = "0.3"
rand = "0.8"
regex = "1.10"
tempfile = "3.8"

# Markdown rendering
comrak = "0.20"
lsp-types = "0.97.0"

# Phase 3: Enhanced TUI Dependencies
# Enhanced TUI widgets
tui-textarea = "0.4"
tui-tree-widget = "0.17"

# Image processing
image = "0.25"

# Animation support
easing = "0.0.5"

# Clipboard access
arboard = "3.3"

# Terminal capabilities
terminal_size = "0.3"

# Text utilities
unicode-segmentation = "1.10"
unicode-width = "0.1"

# Color support  
colorful = "0.3"

# Phase 4: CLI & Utilities Dependencies
# Diff algorithms
similar = "2.3"

# Shell integration
shellexpand = "3.1"
clap_complete = "4.4"

# Text processing
textwrap = "0.16"

# Performance monitoring (optional)
sysinfo = "0.30"

# Cross-platform path handling
dunce = "1.0"

# Log tailing
notify = "6.1"
linemux = "0.2"
jsonschema = "0.18"
humantime = "2.1"
serde_yaml = "0.9"

# JSON Schema generation
schemars = "0.8"
filetime = "0.2.26"
